# tapesprocketdesigner

./: .gitignore  README.md  build.sh  compile_resources.sh  pyproject.toml  update_version.py  upload.sh
tapesprocketdesigner/: customlabel.py  designer.py  sprocketcanvas.py
