
[project]
name = "tapesprocketdesigner"
description = "An application to design SMD tape sprockets"
version = "0.1.0"
authors = [
  { name="Niels Moseley", email="sofascener@gmail.com" },
]
dependencies = [
    "PyQt5"
]

readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/trcwm/tapesprocketdesigner"
"Bug Tracker" = "https://github.com/trcwm/tapesprocketdesigner/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
