# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[project]
name = "tapesprocketdesigner"
description = "An application to design SMD tape sprockets"
version = "0.1.9"
authors = [
  { name="Niels Moseley", email="sofascener@gmail.com" },
]
dependencies = [
    "PyQt5",
    "ezdxf"
]

readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Computer Aided Design :: Mechanical"
]

[tool.setuptools.packages.find]
include = ["tapesprocketdesigner*"]

#[tool.setuptools.packages.find]
#where = ["src"]  # list of folders that contain the packages (["."] by default)

[project.scripts]
tapesprocketdesigner = "tapesprocketdesigner.designer:main"

[project.urls]
"Homepage" = "https://github.com/trcwm/tapesprocketdesigner"
"Bug Tracker" = "https://github.com/trcwm/tapesprocketdesigner/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
